--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dropbox</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="#"><img src="img/logo-small.png" alt="Logo" /></a>
+          </li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li class="nav-left"><a href="#">Piani e Prezzi</a></li>
+          <li class="nav-right"><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+          <li><a href="#" class="btn">Inizia</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
