--- a/index.html
+++ b/index.html
@@ -10,17 +10,31 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="nav-links">
           <li>
             <a href="#"><img src="img/logo-small.png" alt="Logo" /></a>
           </li>
-          <li><a href="#">Perchè Dropbox</a></li>
-          <li><a href="#">Funzioni</a></li>
-          <li class="nav-left"><a href="#">Piani e Prezzi</a></li>
-          <li class="nav-right"><a href="#">Supporto</a></li>
-          <li><a href="#">Contatta l'ufficio vendite</a></li>
-          <li><a href="#">Accedi</a></li>
-          <li><a href="#" class="btn">Inizia</a></li>
+          <li>
+            <a href="#">Perchè Dropbox</a>
+          </li>
+          <li>
+            <a href="#">Funzioni</a>
+          </li>
+          <li class="nav-left">
+            <a href="#">Piani e Prezzi</a>
+          </li>
+          <li class="nav-right">
+            <a href="#">Supporto</a>
+          </li>
+          <li>
+            <a href="#">Contatta l'ufficio vendite</a>
+          </li>
+          <li>
+            <a href="#">Accedi</a>
+          </li>
+          <li>
+            <a href="#" class="btn">Inizia</a>
+          </li>
         </ul>
       </nav>
     </header>
