--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="#"><img src="img/logo-small.png" alt="Logo" /></a>
+            <a href="#" class="nav-a"
+              ><img src="img/logo-small.png" alt="Logo"
+            /></a>
           </li>
           <li>
-            <a href="#">Perchè Dropbox</a>
+            <a href="#" class="nav-a">Perchè Dropbox</a>
           </li>
           <li>
-            <a href="#">Funzioni</a>
+            <a href="#" class="nav-a">Funzioni</a>
           </li>
           <li class="nav-left">
-            <a href="#">Piani e Prezzi</a>
+            <a href="#" class="nav-a">Piani e Prezzi</a>
           </li>
           <li class="nav-right">
-            <a href="#">Supporto</a>
+            <a href="#" class="nav-a">Supporto</a>
           </li>
           <li>
-            <a href="#">Contatta l'ufficio vendite</a>
+            <a href="#" class="nav-a">Contatta l'ufficio vendite</a>
           </li>
           <li>
-            <a href="#">Accedi</a>
+            <a href="#" class="nav-a">Accedi</a>
           </li>
-          <li>
-            <a href="#" class="btn">Inizia</a>
+          <li class="inizia">
+            <a href="#" class="btn btn-blue">Inizia</a>
           </li>
         </ul>
       </nav>
