Add first section. Trying to fix img and continers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -40,5 +47,32 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="first-section">
+        <div class="container">
+          <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+          <div class="small-container">
+            <div class="left-small-container">
+              <p>
+                Finalmente tutti i tuoi strumenti, contenuti e collaboratori
+                sono accessibili dallo stesso posto. Dropbox Business è più di
+                uno spazio di archiviazione sicuro: è un modo intelligente e
+                integrato per ottimizzare il flusso di lavoro esistente.
+              </p>
+              <div class="button">
+                <a href="#" class="btn btn-blue">Inizia la prova gratuita</a>
+              </div>
+              <div>Annulla in qualsiasi momento</div>
+            </div>
+
+            <div class="right-small-container">
+              <img src="img/jumbo.png" alt="" />
+            </div>
+          </div>
+          <i class="fa-solid fa-arrow-down"></i>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
