Add sections with subscription tables and styles

--- a/index.html
+++ b/index.html
@@ -83,7 +83,174 @@
         </div>
       </section>
 
-      <section></section>
+      <section class="container">
+        <h2>Trova il piano business che fa per te</h2>
+
+        <form>
+          <input
+            type="radio"
+            id="Fatturazione mensile"
+            value="Fatturazione mensile"
+            name="Fatturazione"
+          />
+          <label for="Fatturazione mensile">Fatturazione mensile</label>
+
+          <input
+            type="radio"
+            id="Fatturazione annuale"
+            value="Fatturazione annuale"
+            name="Fatturazione"
+          />
+          <label for="Fatturazione annuale">Fatturazione annuale</label>
+        </form>
+
+        <div class="small-container subscribe">
+          <div class="table">
+            <div class="target"><i class="fa-solid fa-user"></i> Singolo</div>
+            <div class="table-container">
+              <h3>Professional</h3>
+              <div class="price">€12.00</div>
+              <div class="fee">/mese</div>
+              <ul>
+                <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                <li>
+                  <i class="fa-solid fa-folder"></i> 5TB di spazio di
+                  archiviazione sicuro
+                </li>
+                <li>
+                  <i class="fa-solid fa-share-nodes"></i>
+                  Funzioni di produttività premium e condivisione file semplice
+                  e sicura
+                </li>
+              </ul>
+              <div class="table-button">
+                <a href="#" class="btn btn-blue">Prova gratis per 30 giorni</a>
+              </div>
+              <div class="buy-now">oppure <a href="#">acquista ora</a></div>
+              <h4>Punti Salienti del piano</h4>
+              <ul>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i> Invia file fino a
+                  100GB con Dropbox Transfert
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Cartelle offline su dispositivi mobili
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="table">
+            <div class="target">
+              <i class="fa-solid fa-people-group"></i> Team
+            </div>
+            <div class="table-container">
+              <h3>Advanced</h3>
+              <div class="price">€18.00</div>
+              <div class="fee">/utente/mese</div>
+              <ul>
+                <li><i class="fa-solid fa-people-group"></i> 3 o più utenti</li>
+                <li>
+                  <i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha
+                  bisogno il tuo team
+                </li>
+                <li>
+                  <i class="fa-solid fa-share-nodes"></i>
+                  Sofisticate funzioni di controllo e per tenere al sicuro tutti
+                  i file del tuo team
+                </li>
+              </ul>
+              <div class="table-button">
+                <a href="#" class="btn btn-blue">Prova gratis per 30 giorni</a>
+              </div>
+              <div class="buy-now">oppure <a href="#">acquista ora</a></div>
+              <h4>Punti Salienti del piano</h4>
+              <ul>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Nessun limite di spazio per i file
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Cartelle offline su dispositivi mobili
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Risparmio del 50% rispetto alle iscrizioni singole
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Possibilità di inserire nuovi membri del team
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Gesione dei permessi in base ai ruoli
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="table">
+            <div class="target">
+              <i class="fa-solid fa-building"></i> Azienda
+            </div>
+            <div class="table-container">
+              <h3>Enterprice</h3>
+              <div class="price">Contattaci</div>
+              <div class="fee">-</div>
+              <ul>
+                <li><i class="fa-solid fa-user"></i> 10 o più utenti</li>
+                <li>
+                  <i class="fa-solid fa-folder"></i> Soluzioni personalizzabili
+                  per la tua azienda
+                </li>
+                <li>
+                  <i class="fa-solid fa-share-nodes"></i>
+                  Assistenza personalizzata per aiutare gli amministratori in
+                  una gestione su larga scala
+                </li>
+              </ul>
+              <div class="table-button">
+                <a href="#" class="btn btn-blue">Contattaci</a>
+              </div>
+              <div class="buy-now">oppure <a href="#">acquista ora</a></div>
+              <h4>Punti Salienti del piano</h4>
+              <ul>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Cartelle offline su dispositivi mobili
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i> Servizio assistenza
+                  24/h
+                </li>
+                <li>
+                  <i class="fa-sharp fa-solid fa-check"></i>
+                  Possibilità di personalizzazione totale
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="table-large">
+          <div class="target"><i class="fa-solid fa-building"></i> Team</div>
+          <div class="table-container">
+            <div class="flex-table-container">
+              <h3>Enterprice</h3>
+              <div class="table-button-flex">
+                <a href="#" class="btn btn-blue">Contatta l'ufficio vendite</a>
+              </div>
+            </div>
+            <div class="price">Contatta l'ufficio vendite per i prezzi</div>
+            <p>
+              Soluzioni personalizzate e supporto su misura per aiutare i
+              professionisti IT nella gestione su qualsiasi scala.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
