Add partner section. Start card section 1st card

--- a/index.html
+++ b/index.html
@@ -251,6 +251,44 @@
           </div>
         </div>
       </section>
+
+      <section class="container">
+        <div class="small-container reverse">
+          <div class="left-small-container">
+            <h3>Entra in contatto con un partner Dropbox</h3>
+            <p>
+              Trova un partner Dropbox e HelloSign di fiducia. Ottieni le
+              soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi
+              aziendali, tra cui implementazione, integrazione, gestione e
+              supporto continui.
+            </p>
+            <div class="button">
+              <a href="#" class="btn btn-white">Trova un partner</a>
+            </div>
+          </div>
+
+          <div class="right-small-container">
+            <img src="img/partner.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="container">
+        <h2>Esegui più poerazioni don Dropbox Business</h2>
+
+        <div class="small-container card-section">
+          <div class="card">
+            <img src="img/business-feature-switching-tools.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
