Add square parts with styles and button, to fix

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 <a href="#" class="btn btn-blue">Inizia la prova gratuita</a>
               </div>
               <div>Annulla in qualsiasi momento</div>
+              <i class="fa-solid fa-arrow-down"></i>
             </div>
 
             <div class="right-small-container">
               <img src="img/jumbo.png" alt="" />
             </div>
           </div>
-          <i class="fa-solid fa-arrow-down"></i>
         </div>
       </section>
 
@@ -274,9 +274,42 @@
       </section>
 
       <section class="container">
-        <h2>Esegui più poerazioni don Dropbox Business</h2>
+        <h2>Esegui più operazioni don Dropbox Business</h2>
 
         <div class="small-container card-section">
+          <div class="card">
+            <img src="img/business-feature-send-files-it.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="img/business-feature-coordinate-it.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="img/business-feature-integrations-it.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
+
           <div class="card">
             <img src="img/business-feature-switching-tools.png" alt="" />
             <h3>Passa di meno da uno strumento all'altro</h3>
@@ -287,7 +320,95 @@
               direttamente da Dropbox
             </p>
           </div>
+
+          <div class="card">
+            <img src="img/business-feature-multi-device.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="img/business-feature-security.png" alt="" />
+            <h3>Passa di meno da uno strumento all'altro</h3>
+            <p>
+              Porta a termine le attività quotidiane con un solo strumento.
+              Crea, modifica e condividi contenuti cloud da Documenti, Fogli e
+              Presentazioni di Google, file Microsoft Office e Dropbox Paper
+              direttamente da Dropbox
+            </p>
+          </div>
         </div>
+      </section>
+
+      <section class="container">
+        <h2 class="dropbox-business">
+          Più di 500.000 team utilizzano Dropbox Business
+        </h2>
+        <a href="#">Scopri di più sui nostri clienti</a>
+      </section>
+
+      <section class="small-container">
+        <div class="mini-container">
+          <div class="mini-square design">
+            <img src="img/designit.svg" alt="" />
+          </div>
+          <div class="mini-square arizona">
+            <img src="img/arizona_state_university.svg" alt="" />
+          </div>
+          <div class="mini-square florida">
+            <img src="img/university_of_florida.svg" alt="" />
+          </div>
+          <div class="mini-square topps">
+            <img src="img/topps.svg" alt="" />
+          </div>
+        </div>
+
+        <div class="mini-container column">
+          <img src="img/designit.svg" alt="" />
+          <p>
+            "I membri del nostro team lavorano contemporaneamente in Paesi, fusi
+            orari e uffici diversi. Ora molte soluzioni sono compatibili con
+            queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
+            Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna
+            è facile quanto Dropbox Paper".
+          </p>
+          <div class="credits">Morten Thomsen, Global IT Lead</div>
+        </div>
+
+        <div class="mini-container">
+          <div class="mini-square bicycle">
+            <img src="img/world_bicycle_relief.svg" alt="" />
+          </div>
+          <div class="mini-square hearst">
+            <img src="img/hearst_corp.svg" alt="" />
+          </div>
+          <div class="mini-square lonely">
+            <img src="img/lonely_planet.svg" alt="" />
+          </div>
+          <div class="mini-square channel">
+            <img src="img/clear_channel.svg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="bkg">
+        <div class="container flex-business">
+          <h2 class="dropbox-business">
+            Porta Dropbox Business nella tua azienda.
+          </h2>
+          <div class="button">
+            <a href="#" class="btn no-border">Inizia la tua prova gratuita</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="container">
+        <h2 class="faq">Domande frequenti</h2>
       </section>
     </main>
   </body>
