Add faq section (no animated)

--- a/index.html
+++ b/index.html
@@ -408,7 +408,30 @@
       </section>
 
       <section class="container">
-        <h2 class="faq">Domande frequenti</h2>
+        <div class="faq">
+          <h2>Domande frequenti</h2>
+        </div>
+        <div class="faq">
+          <span class="question">
+            Qual è la differenza tra Dropbox Business Standard e Dropbox
+            Business Advanced?
+          </span>
+          <i class="arrow fa-solid fa-angle-down"></i>
+        </div>
+        <div class="faq">
+          <span class="question">
+            Qual è la differenza tra Dropbox Business Standard e Dropbox
+            Business Advanced?
+          </span>
+          <i class="arrow fa-solid fa-angle-down"></i>
+        </div>
+        <div class="faq">
+          <span class="question">
+            Qual è la differenza tra Dropbox Business Standard e Dropbox
+            Business Advanced?
+          </span>
+          <i class="arrow fa-solid fa-angle-down"></i>
+        </div>
       </section>
     </main>
   </body>
