Add footer with styles. Page completed (to fix)

--- a/index.html
+++ b/index.html
@@ -434,5 +434,54 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="footer-container">
+        <ul>
+          <li>Dropbox</li>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+        <ul>
+          <li>Prodotti</li>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+        <ul>
+          <li>Azienda</li>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+        <ul>
+          <li>Supporto</li>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+        <ul>
+          <li>Community</li>
+          <li><a href="#">Applicazione desktop</a></li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Piani</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Funzioni</a></li>
+        </ul>
+      </div>
+      <div class="language">
+        <i class="world fa-solid fa-earth-europe"></i> italiano
+        <i class="fa-sharp fa-solid fa-caret-up"></i>
+      </div>
+    </footer>
   </body>
 </html>
