Fixed buttons, some decorations and squares

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="#" class="btn btn-blue">Inizia la prova gratuita</a>
               </div>
               <div>Annulla in qualsiasi momento</div>
-              <i class="fa-solid fa-arrow-down"></i>
+              <a href="#trova"><i class="fa-solid fa-arrow-down"></i></a>
             </div>
 
             <div class="right-small-container">
@@ -82,9 +82,9 @@
           </div>
         </div>
       </section>
-
+      <!-- Subscriptions -->
       <section class="container">
-        <h2>Trova il piano business che fa per te</h2>
+        <h2 id="trova">Trova il piano business che fa per te</h2>
 
         <form>
           <input
@@ -212,7 +212,7 @@
                 </li>
               </ul>
               <div class="table-button">
-                <a href="#" class="btn btn-blue">Contattaci</a>
+                <a href="#" class="btn btn-blue contact">Contattaci</a>
               </div>
               <div class="buy-now">oppure <a href="#">acquista ora</a></div>
               <h4>Punti Salienti del piano</h4>
@@ -251,7 +251,7 @@
           </div>
         </div>
       </section>
-
+      <!-- Reverse -->
       <section class="container">
         <div class="small-container reverse">
           <div class="left-small-container">
@@ -272,7 +272,7 @@
           </div>
         </div>
       </section>
-
+      <!-- Cards -->
       <section class="container">
         <h2>Esegui più operazioni don Dropbox Business</h2>
 
@@ -344,14 +344,14 @@
           </div>
         </div>
       </section>
-
+      <!-- Dropbox Business -->
       <section class="container">
         <h2 class="dropbox-business">
           Più di 500.000 team utilizzano Dropbox Business
         </h2>
         <a href="#">Scopri di più sui nostri clienti</a>
       </section>
-
+      <!-- Squares -->
       <section class="small-container">
         <div class="mini-container">
           <div class="mini-square design">
@@ -368,7 +368,7 @@
           </div>
         </div>
 
-        <div class="mini-container column">
+        <div class="column">
           <img src="img/designit.svg" alt="" />
           <p>
             "I membri del nostro team lavorano contemporaneamente in Paesi, fusi
@@ -395,7 +395,7 @@
           </div>
         </div>
       </section>
-
+      <!-- Dropbox Business cta -->
       <section class="bkg">
         <div class="container flex-business">
           <h2 class="dropbox-business">
@@ -406,7 +406,7 @@
           </div>
         </div>
       </section>
-
+      <!-- Faq -->
       <section class="container">
         <div class="faq">
           <h2>Domande frequenti</h2>
@@ -479,8 +479,9 @@
         </ul>
       </div>
       <div class="language">
-        <i class="world fa-solid fa-earth-europe"></i> italiano
-        <i class="fa-sharp fa-solid fa-caret-up"></i>
+        <i class="world fa-solid fa-earth-europe"></i>
+        <span class="ita">italiano</span>
+        <i class="triangle fa-sharp fa-solid fa-caret-up"></i>
       </div>
     </footer>
   </body>
