--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
       <section class="first-section">
-        <div class="container">
+        <div class="container first-big">
           <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
           <div class="small-container">
             <div class="left-small-container">
@@ -77,7 +77,7 @@
             </div>
 
             <div class="right-small-container">
-              <img src="img/jumbo.png" alt="" />
+              <img class="offset" src="img/jumbo.png" alt="" />
             </div>
           </div>
         </div>
@@ -355,7 +355,7 @@
       <section class="small-container">
         <div class="mini-container">
           <div class="mini-square design">
-            <img src="img/designit.svg" alt="" />
+            <img src="img/designit-bianco.svg" alt="" />
           </div>
           <div class="mini-square arizona">
             <img src="img/arizona_state_university.svg" alt="" />
@@ -369,7 +369,7 @@
         </div>
 
         <div class="column">
-          <img src="img/designit.svg" alt="" />
+          <img src="img/designit-nero.svg" alt="" />
           <p>
             "I membri del nostro team lavorano contemporaneamente in Paesi, fusi
             orari e uffici diversi. Ora molte soluzioni sono compatibili con
