Fixed semantic problem with FAQs and variables CSS

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </header>
 
     <main>
+      <!-- 1st section with img offset -->
       <section class="first-section">
         <div class="container first-big">
           <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -406,32 +407,73 @@
           </div>
         </div>
       </section>
-      <!-- Faq -->
-      <section class="container">
-        <div class="faq">
-          <h2>Domande frequenti</h2>
-        </div>
-        <div class="faq">
-          <span class="question">
+      <!-- Faq list -->
+      <section class="container faq">
+        <h2>Domande frequenti</h2>
+
+        <ul>
+          <li class="question">
             Qual è la differenza tra Dropbox Business Standard e Dropbox
             Business Advanced?
-          </span>
-          <i class="arrow fa-solid fa-angle-down"></i>
-        </div>
-        <div class="faq">
-          <span class="question">
+            <i class="arrow fa-solid fa-angle-down"></i>
+            <ul>
+              <li class="hide">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
+                culpa beatae similique non placeat ratione. Quasi cum, aliquam,
+                inventore nam nulla harum explicabo accusamus recusandae ad
+                perferendis, assumenda eveniet velit.
+              </li>
+            </ul>
+          </li>
+          <li class="question">
             Qual è la differenza tra Dropbox Business Standard e Dropbox
             Business Advanced?
-          </span>
-          <i class="arrow fa-solid fa-angle-down"></i>
-        </div>
-        <div class="faq">
-          <span class="question">
+            <i class="arrow fa-solid fa-angle-down"></i>
+            <ul>
+              <li class="hide">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+                exercitationem, consequatur quos, explicabo, assumenda nisi sed
+                amet aspernatur ducimus earum optio omnis repellat enim nam.
+                Maiores, aperiam. Aspernatur, exercitationem sit.
+              </li>
+            </ul>
+          </li>
+          <li class="question">
             Qual è la differenza tra Dropbox Business Standard e Dropbox
             Business Advanced?
-          </span>
-          <i class="arrow fa-solid fa-angle-down"></i>
-        </div>
+            <i class="arrow fa-solid fa-angle-down"></i>
+            <ul>
+              <li class="hide">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam,
+                reprehenderit quod. Iusto vel provident officia nulla quasi iure
+                voluptatibus nobis placeat, perferendis ad dignissimos accusamus
+                reprehenderit numquam at debitis doloribus!
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <!-- Errore di semantica per quanto riguarda le FAQ che dovrebbero essere a lista -->
+        <!-- <div class="faq">
+            <span class="question">
+              Qual è la differenza tra Dropbox Business Standard e Dropbox
+              Business Advanced?
+            </span>
+            <i class="arrow fa-solid fa-angle-down"></i>
+          </div>
+          <div class="faq">
+            <span class="question">
+              Qual è la differenza tra Dropbox Business Standard e Dropbox
+              Business Advanced?
+            </span>
+            <i class="arrow fa-solid fa-angle-down"></i>
+          </div>
+          <div class="faq">
+            <span class="question">
+              Qual è la differenza tra Dropbox Business Standard e Dropbox
+              Business Advanced?
+            </span>
+            <i class="arrow fa-solid fa-angle-down"></i>
+        </div> -->
       </section>
     </main>
 
